--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "aws-sdk": "^2.382.0"
   },
+  "private": true,
   "scripts": {
     "build": "docker-compose run build && docker-compose down"
   }
