--- a/secrets/terraform.tfvars.example
+++ b/secrets/terraform.tfvars.example
@@ -1,5 +1,3 @@
-auth0_client_id      = ""
-auth0_client_secret  = ""
-auth0_domain         = "dsausa.auth0.com"
-auth0_scope          = "openid"
+aws_profile          = ""
+auth0_audience       = ""
 auth0_session_secret = ""
