--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3'
 services:
+
+  # Build project dependencies
   build:
     command: >-
       sh -c "
@@ -11,3 +13,16 @@ services:
     image: lambci/lambda:build-nodejs8.10
     volumes:
     - ./:/var/task
+
+  # Deploy to AWS
+  terraform:
+    environment:
+      AWS_ACCESS_KEY_ID:
+      AWS_SECRET_ACCESS_KEY:
+      TF_VAR_release:
+      TF_VAR_repo:
+    image: hashicorp/terraform
+    volumes:
+      - ~/.aws:/root/.aws
+      - ./:/terraform
+    working_dir: /terraform
