--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 services:
 
+  npm:
+    entrypoint: npm
+    image: lambci/lambda:build-nodejs8.10
+    volumes:
+    - ./:/var/task
+
   # Build project dependencies
   build:
     command: >-
