Add Slack channel ID

--- a/secrets/terraform.tfvars.example
+++ b/secrets/terraform.tfvars.example
@@ -1,3 +1,7 @@
 aws_profile          = ""
 auth0_audience       = ""
 auth0_session_secret = ""
+release              = ""
+slack_invite_channel = ""
+slack_token          = ""
+slack_url            = ""
