--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-AWS_PROFILE=
-AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_DEFAULT_REGION=us-east-1
+AWS_SECRET_ACCESS_KEY=
+
 AUTH0_AUDIENCE=
-AUTH0_DOMAIN=
+AUTH0_DOMAIN=dsausa.auth0.com
 AUTH0_SESSION_SECRET=
-AUTH_HOST=
-HOST=
-SLACK_URL=
+
+AUTH_HOST=https://auth.dsausa.org
+HOST=http://localhost:3000
+PORT=3000
+
+SLACK_URL=https://bostondsa.slack.com/
 SLACK_TOKEN=
+SLACK_INVITE_CHANNEL=GB1SLKKL7
+SLACK_MESSAGE_TOPIC_ARN=arn:aws:sns:us-east-1:715992480927:slack_socialismbot_post_message
