--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-- "8.10"
+- "10"
 install:
 - docker pull lambci/lambda:build-nodejs8.10
 - docker pull lambci/lambda:nodejs8.10
 script:
-- make
+- make plan
 deploy:
 - provider: script
   script: make apply
