--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "@slack/web-api": "^5.0.1",
-    "aws-serverless-express": "^3.3.5",
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "@slack/web-api": "^5.3.0",
+    "aws-serverless-express": "^3.3.6",
+    "body-parser": "^1.19.0",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.15.6",
-    "jwks-rsa": "^1.3.0",
+    "express-session": "^1.17.0",
+    "jwks-rsa": "^1.6.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
-    "aws-sdk": "^2.400.0"
+    "aws-sdk": "^2.554.0",
+    "dotenv": "^8.2.0"
   },
   "private": true
 }
