--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "aws-serverless-express": "^3.3.6",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "bottleneck": "^2.19.5",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
+    "loglevel": "^1.7.1",
     "luxon": "^1.25.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
